--- a/menu.html
+++ b/menu.html
@@ -1,76 +1,93 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
+<!--Jafett Cobaxin-->
+<!--11/13/22-->
+<!--Chapter 10 (Part 3): Menu-->
 <html>
   <head>
     <meta charset="utf-8">
     <title>Jafett's Menu</title>
+    <link type="text/css" rel="stylesheet" href="menu.css" media="screen">
+    <!--Regular-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 
+    <!--Cursive Font Family-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
   <body>
+    <!--HEADER-->
     <header>
-        <h1>Menu</h1>    
+        <img src="leaf.png" alt="leaf">
+        <h1>Jafett's Menu</h1>    
     </header>
 
-    <section>
+    <!--APPETIZERS-->
+    <section class = 'appetizers'>
         <h1>Appetizers</h1>
         <dl>
-            <dt><h2>Chips and Salsa</h2></dt>
+            <dt>Chips and Salsa</dt>
             <dd>Home made chips paired with our fresh made salsa.</dd>
             <dd>$4.00</dd>
 
-            <dt><h2>Fried Pickles</h2></dt>
+            <dt>Fried Pickles</dt>
             <dd>Go ahead - Give these a try! Our chef has his own secret batter recipe that makes these irresistible.</dd>
             <dd>$3.00</dd>
 
-            <dt><h2>Spinach-Artichoke Dip</h2></dt>
+            <dt>Spinach-Artichoke Dip</dt>
             <dd>A creamy delicious blend that will leave you wondering why you never liked spinach as a child.</dd>
             <dd>$5.00</dd>
 
-            <dt><h2>Stuffed Mushrooms</h2></dt>
+            <dt>Stuffed Mushrooms</dt>
             <dd>Cheesy earthy goodness that will melt in your mouth.</dd>
             <dd>$5.00</dd>
         </dl>
     </section>
 
-    <section>
+    <!--MAIN DISHES-->
+    <section class = 'maindish'>
         <h1>Main Dish</h1>
         <dl>
-            <dt><h2>Portobello Mushroom Burger</h2></dt>
+            <dt>Portobello Mushroom Burger</dt>
             <dd>A mushroom burger that defines what should be expected out of a mushroom burger. Served with side of fries or chips.</dd>
             <dd>$10.00</dd>
 
-            <dt><h2>Fresh Alaskan Halibut</h2></dt>
+            <dt>Fresh Alaskan Halibut</dt>
             <dd>Caught in the cold, clear waters of Alaska and brought to you overnight. Served with rice and seasoned vegetables.</dd>
             <dd>$18.00</dd>
 
-            <dt><h2>Southwest Chicken Salad</h2></dt>
+            <dt>Southwest Chicken Salad</dt>
             <dd>Fire roasted vegetables, bean salsa, and grilled chicken served on a crisp bed of lettuce. Take off your sombrero and stay a while.</dd>
             <dd>$15.00</dd>
 
-            <dt><h2>Alfredo</h2></dt>
+            <dt>Alfredo</dt>
             <dd>Home made paste prepared by our chef with a creamy Alfredo sauce. Served with a side of asparagus or seasonal vegetables.</dd>
             <dd>$12.00</dd>
         </dl>
     </section>
 
-    <section>
+    <!--DESSERT-->
+    <section class = 'dessert'>
         <h1>Dessert</h1>
         <dl>
-            <dt><h2>Cheese Cake</h2></dt>
-            <dd>A great way to end the meal or take it to go for a later snack. Choose from blueberry, raspberry, or marbled cheese cake.</dd>
+            <dt>Cheese Cake</dt>
+            <dd><div>A great way to end the meal or take it to go for a later snack. Choose from blueberry, raspberry, or marbled cheese cake.</div></dd>
             <dd>$7.00</dd>
 
-            <dt><h2>Tiramisu</h2></dt>
-            <dd>We didn't invent it but we have perfected it. A perfect finish to any meal.</dd>
+            <dt>Tiramisu</dt>
+            <dd><div>We didn't invent it but we have perfected it. A perfect finish to any meal.</div></dd>
             <dd>$8.00</dd>
         </dl>
     </section>
 
     <footer>
-        <blockquote>
+        <p>
             @ All rights reserved 2017<br>
             The Cupboard (402) 123_1234
-        </blockquote>
+        </p>
+    </footer>
   </body>
   </body>
 </html>
